--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.2", features = [] }
 tauri = { version = "1.2", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-diesel = "2.0.3"
+diesel = {version = "2.0.3", features = ["postgres"]}
 dotenvy = "0.15.6"
 
 [features]
