--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,8 +16,10 @@ tauri-build = { version = "1.2", features = [] }
 tauri = { version = "1.2", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-diesel = {version = "2.0.3", features = ["postgres"]}
+diesel = {version = "2.0.3", features = ["postgres"] }
 dotenvy = "0.15.6"
+tokio = "1.26.0"
+serenity = "0.11.5"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
