--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,7 @@ serde_json = "1.0"
 diesel = {version = "2.0.3", features = ["postgres"] }
 dotenvy = "0.15.6"
 tokio = "1.26.0"
-serenity = { path = "./crates/serenity-0.11.5" }
+serenity = { git = "https://github.com/polyphony-chat/serenity.git" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
