--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,8 @@ diesel = {version = "2.0.3", features = ["postgres"] }
 dotenvy = "0.15.6"
 tokio = "1.26.0"
 serenity = { git = "https://github.com/polyphony-chat/serenity.git" }
+reqwest = "0.11.15"
+async-trait = "0.1.68"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
