--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tokio = "1.26.0"
 serenity = { git = "https://github.com/polyphony-chat/serenity.git" }
 reqwest = "0.11.15"
 async-trait = "0.1.68"
+tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
