Update Package Dependencies Remove frontend Websocket, replace with backend websocket Add url package for URL handling and parsing

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0",
-    "tauri-plugin-websocket-api": "https://github.com/tauri-apps/tauri-plugin-websocket"
+    "@tauri-apps/api": "^1.2.0"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
