--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,8 @@ tokio = "1.26.0"
 serenity = { git = "https://github.com/polyphony-chat/serenity.git" }
 reqwest = "0.11.15"
 async-trait = "0.1.68"
-tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
+tokio-tungstenite = "0.18.0"
+url = "2.3.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
