--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build ./src-tauri/ --verbose
+      run: cargo build --manifest-path ./src-tauri/Cargo.toml --verbose
     #- name: Run tests
     #  run: cargo test --verbose
