--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --manifest-path ./src-tauri/Cargo.toml --verbose
+      run: |
+        cd src/src-tauri/
+        cargo build --verbose
     #- name: Run tests
     #  run: cargo test --verbose
