--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: |
+        sudo apt-get install libgdk3.0-dev
         cd src-tauri/
         cargo build --verbose
     #- name: Run tests
