--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: |
-        sudo apt-get install libgdk3.0-dev
+        sudo apt-get update && sudo apt-get install -y libgtk-3-dev
         cd src-tauri/
         cargo build --verbose
     #- name: Run tests
