--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,9 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
+    - name: Install Dependencies
       run: |
-        sudo apt-get update && sudo apt-get install -y libgtk-3-dev
+        sudo apt-get update && sudo apt-get install -y libgtk-3-dev libsoup2.4 openssl
+    - name: Build
+      run: |     
         cd src-tauri/
         cargo build --verbose
     #- name: Run tests
