--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install Dependencies
       run: |
-        sudo apt-get update && sudo apt-get install -y libgtk-3-dev libsoup2.4 openssl
+        sudo apt-get update && sudo apt-get install -y libgtk-3-dev libsoup2.4 openssl libjavascriptcoregtk-4.0-dev
     - name: Build
       run: |     
         cd src-tauri/
