--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,10 +19,26 @@ serde_json = "1.0"
 diesel = {version = "2.0.3", features = ["postgres"] }
 dotenvy = "0.15.6"
 tokio = "1.26.0"
-serenity = { git = "https://github.com/polyphony-chat/serenity.git", branch = "client-has-urls" }
 reqwest = "0.11.15"
 async-trait = "0.1.68"
 url = "2.3.1"
+
+[dependencies.serenity]
+git = "https://github.com/polyphony-chat/serenity.git"
+branch = "client-has-urls" 
+default-features = false
+features = [
+    "builder",
+    "chrono",
+    "client",
+    "cache",
+    "gateway",
+    "http",
+    "model",
+    "utils",
+    "rustls_backend",
+]
+version = "0.11"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
