--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,8 +1,8 @@
-name: Rust
+name: Build and Test
 
 on:
   push:
-    branches: [ "main", "dev" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
@@ -16,12 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Install Dependencies
-      run: |
-        sudo apt-get update && sudo apt-get install -y libgtk-3-dev libsoup2.4 openssl libjavascriptcoregtk-4.0-dev libwebkit2gtk-4.0-dev
     - name: Build
       run: |     
-        cd src-tauri/
+        cd src/
         cargo build --verbose
-    #- name: Run tests
-    #  run: cargo test --verbose
+    - name: Run tests
+      run: cargo test --verbose
