--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
-name = "polyphony"
+name = "polyphony-native"
 version = "0.1.0"
 edition = "2021"
+license = "GPL-3.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+iced = "0.10"
+chorus = { git = "https://github.com/polyphony-chat/chorus.git" }
+
+[dev-dependencies]
+rusty-hook = "0.11.2"
