--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ license = "GPL-3.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced = "0.10"
-chorus = { git = "https://github.com/polyphony-chat/chorus.git", features = [
-    "client",
-] }
+iced = { version = "0.10", features = ["tokio"] }
+chorus = { version = "0.1.0", features = ["client"] }
 tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
+serde = { version = "1.0.188", features = ["derive", "rc"] }
+serde_json = "1.0.105"
 
 [dev-dependencies]
 rusty-hook = "0.11.2"
+iced = { version = "0.10", features = ["debug"] }
