--- a/crates/polyphony-tauri/Cargo.toml
+++ b/crates/polyphony-tauri/Cargo.toml
@@ -3,7 +3,7 @@ name = "polyphony-tauri"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
-license = ""
+license = "MPL-2.0"
 repository = ""
 edition = "2021"
 
