--- a/crates/polyphony-tauri/gen/apple/Podfile
+++ b/crates/polyphony-tauri/gen/apple/Podfile
@@ -1,3 +1,9 @@
+# Copyright (c) 2024 star
+# 
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
 # Uncomment the next line to define a global platform for your project
 
 target 'polyphony-tauri_iOS' do
