--- a/crates/polyphony-tauri/gen/apple/polyphony-tauri.xcodeproj/xcshareddata/xcschemes/polyphony-tauri_iOS.xcscheme
+++ b/crates/polyphony-tauri/gen/apple/polyphony-tauri.xcodeproj/xcshareddata/xcschemes/polyphony-tauri_iOS.xcscheme
@@ -1,3 +1,11 @@
+<!--
+ Copyright (c) 2024 star
+ 
+ This Source Code Form is subject to the terms of the Mozilla Public
+ License, v. 2.0. If a copy of the MPL was not distributed with this
+ file, You can obtain one at http://mozilla.org/MPL/2.0/.
+-->
+
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1430"
