--- a/crates/polyphony-tauri/gen/apple/project.yml
+++ b/crates/polyphony-tauri/gen/apple/project.yml
@@ -1,3 +1,9 @@
+# Copyright (c) 2024 star
+# 
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
 name: polyphony-tauri
 options:
   bundleIdPrefix: chat.polyphony
