--- a/crates/polyphony-wasm/Cargo.toml
+++ b/crates/polyphony-wasm/Cargo.toml
@@ -1,7 +1,12 @@
+// This Source Code Form is subject to the terms of the Mozilla Public
+// License, v. 2.0. If a copy of the MPL was not distributed with this
+// file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
 [package]
 name = "polyphony-wasm"
 version = "0.1.0"
 edition = "2021"
+license = "MPL-2.0"
 
 [dependencies]
 chorus = { version = "0.13.0", default-features = false, features = [
